 - Fixed Maria and Terry AI so they call the correct functions when they use items. This fixes the skipped turn bugs their fights had
* Fixed some typos and bugs related to Bastet (Cat Dynasty)
* Fixed a bugged flag that'd cause the game to not recognize you beating Orchid

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.4d
------------
* Mass of typos
* Fixed several bugged abilities (due to the new damagePool property) that were targeting the wrong stats. This applies to Rut, Tirade, Preach and Sermon.
* Reworked the combat item system. Report if there's any weirdness when using items.
* Added some more fates to Asche
* Expanded on Asche's inventory
* Added Aquilius to outlaws camp (find him in the infirmary). Written by The Observer.
* Jo Rhade has made a re-appearance with a new win scene or two for the equines. Player needs a cock.
* Themed rooms are added to the Shadow Lady. You need to buy a regular whore first (currently only Roa available)
 - Cat Dynasty, chapter one, written by LD and QB
 - More to come...
* Added some Dreams for Donovan and Asche. Written by The Observer.

Version 0.4c2
-------------
* Fixed a bug in the combat code that'd cause the fight against Layla to break.
* Fixed a bug in the code that'd break Out of Combat abilities. First Aid/Heal should work again.
* Some additional Asche fortunes

Version 0.4c
------------
* Yet more typo fixes
* Twopenny's armor shop added to Rigard shop street (The Observer)
* Asche's magic shop added to Rigard shop street (The Observer)
* Continuation on the combat rewrite:
 - Fixed some typos and borked stuff
 - Cooldowns on Bash/Grand slam reduced
 - The rest of the physical skills replaced
 - EnemySkills replaced: Scorpion, Orchid, Gol, Corishev
 - All seduction skills replaced
 - All black magic replaced
 - Most healing spells replaced